---

:sectnumlevels: 0

////
Hide stuff inside these lines
////

[role=release-note]

== Version 1.15.0
_February 17th, 2020_

include::docs/v1/tech/__database-migration-warning.adoc[]

=== New
* FusionAuth Reactor &#8482;. FusionAuth Reactor is available with all paid editions of FusionAuth. The feature in the Reactor suite will be breached password detection.

=== Fixed

[role=release-note]

== Version 1.14.0
_January 22th, 2020_

include::docs/v1/tech/__database-migration-warning.adoc[]

:warning_message: pass:normal[This release changes a default setting in the FreeMarker template engine to automatically HTML escape all values. This change provides a better defense of possible script attack due to missing an escape. Prior to this change, HTML escaping was added where necessary using the FreeMarker built-in `?html` annotation. \
{nbsp} + \
{nbsp} + \
This change may affect you if you are performing advanced HTML escaping in your themed templates. During upgrade, any usage of `?html` in a themed template will removed because it is now handled automatically and it is no longer valid to use the FreeMarker built-in `?html`. \
{nbsp} + \
{nbsp} + \
If any of your translated messages include an HTML entity such as `\&amp;hellip;` and you are including this message using the theme message helper `theme.message` you may need to make a small adjustment in order for the entity to render properly. For example, on the Logout template the default text is `Logging out&hellip;` but if you see it rendered as `Logging out\&amp;hellip;` you will need to add an the FreeMarker suffix `?no_esc` so that the usage looks like this `theme.message('logging-out')?no_esc`. \
{nbsp} + \
{nbsp} + \