@@ -1,0 +1,32 @@
+{
+  "event": {
+    "createInstant": 1505762615056,
+    "id": "e502168a-b469-45d9-a079-fd45f83e0406",
+    "tenantId": "e872a880-b14f-6d62-c312-cb40f22af465",
+    "type": "user.password.breach",
+    "user": {
+      "active": true,
+      "email": "example@fusionauth.io",
+      "id": "00000000-0000-0001-0000-000000000000",
+      "breachedPasswordStatus" : "ExactMatch",
+      "breachedPasswordLastCheckedInstant" : 1505762615056,
+      "passwordChangeReason": "Breached",
+      "passwordChangeRequired" : true,
+      "registrations": [
+        {
+          "applicationId": "10000000-0000-0002-0000-000000000001",
+          "id": "00000000-0000-0002-0000-000000000000",
+          "insertInstant": 1446064706250,
+          "roles": [
+            "user"
+          ],
+          "usernameStatus": "ACTIVE"
+        }
+      ],
+      "tenantId": "f24aca2b-ce4a-4dad-951a-c9d690e71415",
+      "twoFactorEnabled": false,
+      "usernameStatus": "ACTIVE",
+      "verified": true
+    }
+  }
+}
