@@ -62,6 +62,10 @@
             "enabled": true,
             "transactionType": "None"
           },
+          "user.password.breach": {
+            "enabled": true,
+            "transactionType": "None"
+          },
           "user.registration.create": {
             "enabled": true,
             "transactionType": "None"
