@@ -7,6 +7,7 @@
 * ``user.reactivate`` - When a user is reactivated
 * ``user.login.success`` - When a user completes a login request [since]#Available Since 1.6.0#
 * ``user.login.failed`` - When a user fails a login request [since]#Available Since 1.6.0#
+* ``user.password.breach`` - When Reactor detects a user is using a potentially breached password [since]#Available Since 1.15.0#
 * ``user.registration.create`` - When a user registration is created [since]#Available Since 1.6.0#
 * ``user.registration.update`` - When a user registration is updated [since]#Available Since 1.6.0#
 * ``user.registration.delete`` - When a user registration is deleted [since]#Available Since 1.6.0#
