@@ -32,7 +32,7 @@ The following APIs provide a subset of the Tenant configuration without an API K
 
 This API is used to create a new Tenant.
 
-=== Requestu
+=== Request
 
 [.api-authentication]
 link:authentication#api-key-authentication[icon:lock[role=red,type=far]] Create a Tenant with a randomly generated Id
