@@ -18,6 +18,7 @@ These are the events that FusionAuth generates that can be optionally consumed b
 * <<User Email Verified>> - when a user verifies their email address
 * <<User Login Success>> - when a user successfully completes login
 * <<User Login Failure>> - when a user fails to complete login
+* <<User Password Breach>> - when Reactor detects a user is using a potentially breached password
 * <<User Registration Create>> - when a new user registration is created
 * <<User Registration Update>> - when a user registration is update
 * <<User Registration Delete>> - when a user registration is deleted
@@ -496,6 +497,49 @@ user.login.failed
 .Example Event JSON
 ----
 include::docs/src/json/events/user-login-failed.json[]
+----
+
+== User Password Breach
+
+[NOTE.since]
+====
+This event has been available since 1.15.0
+====
+
+This event is generated when Reactor detects a user is using a potentially breached password
+
+[source,shell]
+.Event type
+----
+user.password.breach
+----
+
+[cols="3a,7a"]
+[.api]
+.Event Body
+|===
+|[field]#event.createInstant# [type]#[Long]#
+|The link:/docs/v1/tech/reference/data-types#instants[instant] that the event was generated.
+
+|[field]#event.id# [type]#[UUID]#
+|The event unique Id. You may receive an event more than once based upon your transaction settings. This Id may be used to identify a duplicate event.
+
+|[field]#event.tenantId# [type]#[UUID]#
+|The unique tenant identifier. This value may not be returned if not applicable.
+
+|[field]#event.type# [type]#[String]#
+|The event type, this value will always be `user.password.breach`.
+
+|[field]#event.user# [type]#[Object]#
+|The user that failed the login request. See the link:../apis/users[Users API] for property definitions and example JSON.
+|===
+
+=== Event JSON
+
+[source,json]
+.Example Event JSON
+----
+include::docs/src/json/events/user-password-breach.json[]
 ----
 
 == User Registration Create
