@@ -34,10 +34,10 @@ sitemap:
             <div>
               <div class="text-center">
                 <h1><i class="fad fa-user-headset fs-350"></i></h1>
-                <h2>50% Off Support</h2>
+                <h2>50% Off Paid Edition</h2>
               </div>
               <hr/>
-              <p>Troubleshooting authentication will eat your time like Mynocks eat power cables. Our <span class="font-weight-bold">Premium</span> and <span class="font-weight-bold">Enterprise</span> support plans give you direct access to our engineering team to keep you running faster than the Millennium Falcon. You get: </p>
+              <p>Troubleshooting authentication will eat your time like Mynocks eat power cables. Our <span class="font-weight-bold">Premium</span> and <span class="font-weight-bold">Enterprise</span> editions give you direct access to our engineering team to keep you running faster than the Millennium Falcon. You get: </p>
 
               <ul class="icon-list mb-1">
                 <li class="mb-3"><span class="icon"><i class="fa fa-check-circle text-green"></i></span> Fast response time through email, Slack, and phone</li>
@@ -51,7 +51,7 @@ sitemap:
               <h3 class="text-dark">Sign up before Feb. 29 <br />and use the coupon code </h3>
               <h1 class="text-primary">FA50Spring</h1>
               <h3 class="text-dark">to get 50% off your monthly <br />bill for the next 12 months!</h3>
-              <a class="btn btn-primary btn-block text-uppercase" href="https://account.fusionauth.io/purchase-support">I Want 50% Off Support</a>
+              <a class="btn btn-primary btn-block text-uppercase" href="https://account.fusionauth.io/select-edition">I Want 50% Off Paid Edition</a>
             </div>
           </div>
         </div>
