@@ -76,7 +76,7 @@ header_dark: true
                 <li class="mb-3 ml-4"><span class="icon"><i class="fa fa-chevron-right fa-xs text-green"></i></span>Response within 1 business day</li>
               </ul>
             </div>
-            <a class="btn btn-primary btn-block text-uppercase" href="{% if jekyll.environment == 'development' %}https://account-local.fusionauth.io{% else %}https://account.fusionauth.io{% endif %}/purchase-support?supportContract.plan=PREMIUM">Buy Now</a>
+            <a class="btn btn-primary btn-block text-uppercase" href="{% if jekyll.environment == 'development' %}https://account-local.fusionauth.io{% else %}https://account.fusionauth.io{% endif %}/select-edition?license.plan=PREMIUM">Buy Now</a>
           </div>
         </div>
         <div class="col-12 col-md-6 col-lg-4 mb-3">
@@ -104,7 +104,7 @@ header_dark: true
                 <li class="mb-3 ml-4"><span class="icon"><i class="fa fa-chevron-right fa-xs text-green"></i></span>Under 2 hours response time</li>
               </ul>
             </div>
-            <a class="btn btn-primary btn-block text-uppercase" href="{% if jekyll.environment == 'development' %}https://account-local.fusionauth.io{% else %}https://account.fusionauth.io{% endif %}/purchase-support?supportContract.plan=ENTERPRISE">Buy Now</a>
+            <a class="btn btn-primary btn-block text-uppercase" href="{% if jekyll.environment == 'development' %}https://account-local.fusionauth.io{% else %}https://account.fusionauth.io{% endif %}/select-edition?license.plan=ENTERPRISE">Buy Now</a>
           </div>
         </div>
     </div>
