@@ -19,6 +19,8 @@ include::docs/v1/tech/__database-migration-warning.adoc[]
 
 === New
 * FusionAuth Reactor &#8482;. FusionAuth Reactor is available with all paid editions of FusionAuth. The feature in the Reactor suite will be breached password detection.
+* New event
+** `user.password.breach`
 
 === Fixed
 
